--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   hive_flutter: ^1.1.0
   path_provider: ^2.0.12
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
